tests/ui/coherence/coherence-cross-crate-small_conflict.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `isize`
  --> $DIR/coherence-cross-crate-small_conflict.rs:9:1
   |
LL | impl<A: MyLocal> Foo for A { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `trait_impl_conflict`:
           - impl Foo for isize;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
